# DocMind

./: README.md
backend/: .gitignore  README.md  check_db.py  clear_chroma.py  example.env  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 014cc01019c3_add_project_table_fix_relationships.py  27e9fc510398_drop_document_id_from_chat_conversation.py  508db5064310_initial_migration.py  7f6602eb8be6_add_message_citation_table.py  8ce0968f8856_add_username_column_to_user.py  b31cf85ae736_delete_relationship_to_chat_.py  c921367f43a3_rename_thumbnail_url_to_thumbnai_key_in_.py  d7a304eae295_add_project_table.py
backend/app/: __init__.py  config.py  extensions.py
backend/app/agents/: graph.py  graph_state.py  history.py  llm.py
backend/app/agents/nodes/: answer_node.py  reasoning_node.py
backend/app/api/: __init__.py  auth.py  chats.py  conversations.py  documents.py  projects.py
backend/app/models/: __init__.py  chat_conversation.py  chat_message.py  document.py  layout_element.py  message_citation.py  page.py  project.py  user.py
backend/app/services/: bm25_service.py  chroma_service.py  file_service.py  hybrid_retrieval.py  jwt_service.py  ocr_service.py  retrieval_filter.py
backend/app/tasks/: celery_utils.py  ocr_tasks.py
backend/app/tools/: code_interpreter_tool.py  datetime_tool.py  retrieval_tool.py  web_search_tool.py
backend/app/utils/: citation_parser.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: CreateProjectModal.jsx  (+3 more)
(+11 files in other folders)
