[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-document-intelligence"
version = "0.1.0"
description = "A MultiModal Document Intelligence application using Flask, Celery, and ChromaDB."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Rushikesh" }
]
dependencies = [
    "boto3==1.43.34",
    "celery==5.6.3",
    "chromadb==1.5.9",
    "colorlog==6.10.1",
    "docling==2.106.0",
    "docx2pdf==0.1.8",
    "Flask==3.1.3",
    "flask_caching==2.4.0",
    "flask_cors==6.0.5",
    "flask_jwt_extended==4.7.4",
    "flask_sqlalchemy==3.1.1",
    "google_search_results==2.4.2",
    "langchain_core==1.4.8",
    "langchain_groq==1.1.3",
    "langgraph==1.2.6",
    "litellm==1.89.3",
    "numpy==2.5.0",
    "pdf2image==1.17.0",
    "Pillow==12.2.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "redis==8.0.1",
    "sentence_transformers==5.6.0",
    "SQLAlchemy==2.0.51",
    "typing_extensions==4.15.0",
    "Werkzeug==3.1.8"
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
